--- a/15.MONITORING/9-1.ingress.prometheus.yaml
+++ b/15.MONITORING/9-1.ingress.prometheus.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prometheus
@@ -10,8 +10,7 @@ metadata:
     #nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: prometheus.ekstest.com
-    http:
+  - http:
       paths:
         - path: /
           backend:
